--- a/ImageRecognition/Base.lproj/Main.storyboard
+++ b/ImageRecognition/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cNm-sA-rHu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cNm-sA-rHu">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -226,33 +226,10 @@
                     <view key="view" contentMode="scaleToFill" id="cYE-RW-3YK">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8M3-en-tCM">
-                                <rect key="frame" x="0.0" y="88" width="414" height="28"/>
-                                <fontDescription key="fontDescription" name="CourierNewPS-BoldMT" family="Courier New" pointSize="24"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6CO-iD-8vj">
-                                <rect key="frame" x="20" y="157" width="49" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <action selector="switchDidChange:" destination="Nlw-XZ-ma3" eventType="valueChanged" id="5Cu-Af-26P"/>
-                                </connections>
-                            </switch>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="5RB-rq-1rc"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="5RB-rq-1rc" firstAttribute="trailing" secondItem="8M3-en-tCM" secondAttribute="trailing" id="fy8-wB-yVW"/>
-                            <constraint firstItem="8M3-en-tCM" firstAttribute="leading" secondItem="5RB-rq-1rc" secondAttribute="leading" id="wYo-bq-ZZp"/>
-                            <constraint firstItem="8M3-en-tCM" firstAttribute="top" secondItem="5RB-rq-1rc" secondAttribute="top" id="zrQ-sB-pDs"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Q70-M3-dZP"/>
-                    <connections>
-                        <outlet property="mySwitch" destination="6CO-iD-8vj" id="4r1-RW-wPl"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Q2-MI-YMP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -526,6 +503,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="ocX-nq-gKD" firstAttribute="leading" secondItem="jb2-ry-rao" secondAttribute="leading" id="3mf-3G-DAq"/>
+                                    <constraint firstAttribute="height" constant="544" id="7wd-0L-JnH"/>
                                     <constraint firstItem="sE1-9m-6IT" firstAttribute="top" secondItem="MJr-82-FYP" secondAttribute="bottom" constant="48" id="8dM-In-NW1"/>
                                     <constraint firstItem="ocX-nq-gKD" firstAttribute="top" secondItem="Xdh-jy-fdV" secondAttribute="bottom" constant="16" id="Ac4-68-OTT"/>
                                     <constraint firstItem="Xdh-jy-fdV" firstAttribute="leading" secondItem="qx8-gs-znt" secondAttribute="leading" constant="34" id="BDX-fW-g1G"/>
@@ -536,6 +514,7 @@
                                     <constraint firstItem="MJr-82-FYP" firstAttribute="top" secondItem="jb2-ry-rao" secondAttribute="bottom" constant="8" symbolic="YES" id="L2Z-is-4Dg"/>
                                     <constraint firstItem="QO0-1B-0gt" firstAttribute="centerX" secondItem="qx8-gs-znt" secondAttribute="centerX" id="MgE-sU-mny"/>
                                     <constraint firstItem="QO0-1B-0gt" firstAttribute="top" secondItem="qx8-gs-znt" secondAttribute="top" constant="15" id="WAP-kB-XRW"/>
+                                    <constraint firstAttribute="width" constant="414" id="Zbd-QY-kBr"/>
                                     <constraint firstItem="ocX-nq-gKD" firstAttribute="trailing" secondItem="MJr-82-FYP" secondAttribute="trailing" id="aNh-Jb-j1a"/>
                                     <constraint firstItem="QO0-1B-0gt" firstAttribute="centerX" secondItem="sE1-9m-6IT" secondAttribute="centerX" id="cZt-VK-Je1"/>
                                     <constraint firstItem="jb2-ry-rao" firstAttribute="top" secondItem="ocX-nq-gKD" secondAttribute="bottom" constant="35" id="gLp-UA-oGN"/>
@@ -547,10 +526,12 @@
                                     <constraint firstItem="m7r-Er-aik" firstAttribute="top" secondItem="GF2-gZ-F7d" secondAttribute="bottom" constant="8" symbolic="YES" id="zxd-ft-9Tk"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" misplaced="YES" image="map" translatesAutoresizingMaskIntoConstraints="NO" id="yKo-em-j73">
-                                <rect key="frame" x="-63" y="0.0" width="541" height="315"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="map" translatesAutoresizingMaskIntoConstraints="NO" id="yKo-em-j73">
+                                <rect key="frame" x="-63.5" y="0.0" width="541" height="315"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="315" id="KSF-Qk-JQC"/>
                                     <constraint firstAttribute="height" constant="315" id="KjF-3q-0eU"/>
+                                    <constraint firstAttribute="width" constant="541" id="zKI-XN-alq"/>
                                 </constraints>
                             </imageView>
                         </subviews>
